courses/430_programming-languages/assignment-6/tests/error/hw4_eval40.correct
conditional expression requires matching types, found 'string' and 'int'
